--- a/app/styles/utils/_config.scss
+++ b/app/styles/utils/_config.scss
@@ -1074,10 +1074,12 @@ $input: (
     focus: (
       background-color: $color-white,
       border-color: $color-white,
+      color: $color-black,
     ),
     value: (
       background-color: $color-white,
       border-color: $color-white,
+      color: $color-black,
     )
   )
 );
